--- a/style.css
+++ b/style.css
@@ -551,6 +551,7 @@
                                     flex-direction: column;
                                     align-items: flex-start;
                                     gap: 10px;
+                                    border-radius: 20px;
                                 }
                                 .main-menu {
                                     flex-direction: column;
