Update button Home & Update Exam

--- a/style.css
+++ b/style.css
@@ -887,3 +887,26 @@
                                     font-size: 13px;
                                 }
                             }
+                            /*button*/
+                            
+                            .button-home {
+                                color: #b30000;
+                                padding: 10px 20px;
+                                border: none;
+                                border-radius: 6px;
+                                margin-bottom: 10px;
+                                cursor: pointer;
+                                font-size: 16px;
+                                font-weight: bold;
+                                transition: background-color 0.3s, box-shadow 0.3s;
+                            }
+                            
+                            .button-home:hover {
+                                background-color: #b30000;
+                                color: white;
+                            }
+                            
+                            .button-home a {
+                                color: inherit;
+                                text-decoration: none;
+                            }
