--- a/style.css
+++ b/style.css
@@ -809,7 +809,7 @@
                                 }
                                 .navbar .container {
                                     flex-direction: row;
-                                    justify-content: space-between;
+                                    justify-content: space-around;
                                     align-items: center;
                                 }
                             }
