Update fix logo

--- a/style.css
+++ b/style.css
@@ -799,7 +799,7 @@
                                     flex-direction: column;
                                     align-items: flex-start;
                                     gap: 10px;
-                                    align-items: center;
+                                    align-items: left;
                                 }
                             }
                             
@@ -810,7 +810,7 @@
                                 .navbar .container {
                                     flex-direction: row;
                                     justify-content: space-around;
-                                    align-items: center;
+                                    align-items: left;
                                 }
                             }
                             /* Responsive: main menu */
