--- a/assets/style_part.css
+++ b/assets/style_part.css
@@ -386,6 +386,10 @@
          width: 100%;
          text-align: center;
      }
+     .navigation {
+         justify-content: space-between;
+         width: 100%;
+     }
  }
  /* ======== RESULTS SECTION ======== */
  
